# cowpoke

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
cowpoke/: asgi.py  settings.py  urls.py  wsgi.py
