[tool.poetry]
name = "cowpoke"
version = "0.1.0"
description = "A service for wrangling DNS"
authors = ["Greg Guthe <gguthe@mozilla.com>"]
license = "MPL-2"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.6"
psycopg2 = "^2.8.6"
dj-database-url = "^0.5.0"
dockerflow = "^2020.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
coverage = "^5.4"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
